@@ -15,9 +15,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
-
-import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
@@ -34,31 +31,40 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // ✅ A MUDANÇA ESTÁ AQUI: Aplica explicitamente a configuração do seu bean de CORS
+            // Aplica a configuração de CORS definida no Bean abaixo
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             
-            // Desabilita a proteção CSRF, que é necessária para APIs stateless
+            // Desabilita CSRF (necessário para APIs REST stateless)
             .csrf(csrf -> csrf.disable())
             
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**").permitAll() // Rotas de autenticação são públicas
-                .anyRequest().authenticated() // TODAS as outras rotas exigem autenticação
+                // IMPORTANTE: Verifique se o seu Controller usa @RequestMapping("/api/auth")
+                // Se o seu login for apenas em "/auth/login", remova o "/api" abaixo.
+                .requestMatchers("/api/auth/**").permitAll() 
+                .anyRequest().authenticated()
             )
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
             
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    
+    configuration.setAllowedOrigins(Arrays.asList(
+        "http://localhost",           // Para seus testes locais funcionarem
+        "http://localhost:80",        // Variação local
+        "http://18.229.124.123"       // 🟢 O IP DA SUA AWS (Sem a porta 80, pois é padrão)
+    ));
+    
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+    configuration.setAllowCredentials(true);
+
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+}
 }
